--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -141,6 +141,7 @@ footer {
     background: url(../images/pattern-hills.svg) no-repeat center;
     background-size: 200% 100%;
     background-position: right;
+    gap: 40px;
   }
 }
 
@@ -166,7 +167,7 @@ footer {
   }
 
   .icons i {
-    font-size: 20px;
+    font-size: 30px;
   }
 
   .attribution {
