--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -36,15 +36,15 @@ body {
 
 /* Header Styles 
 ******************************************/
-header {
+main {
   height: 70vh;
   background-image: url(../images/bg-stars.svg);
   background: no-repeat cover center bottom border-box;
 }
 
-h2 {
+h1 {
   color: white;
-  padding: 70px 0;
+  padding: 120px 0 70px;
   font-size: 18px;
   text-align: center;
   text-transform: uppercase;
@@ -53,7 +53,7 @@ h2 {
 
 /* Main Styles 
 ******************************************/
-main {
+.main {
   display: flex;
   flex-direction: row;
   gap: 20px;
